Added Github Link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <h1 class="text2">This is Sam</h1>
     </div>
     
-    <div class="github">
+    <div onclick="
+    gotogithub();
+    " class="github">
         <img src="./github.svg" alt="">
         <p>sampathbandla/helloworld</p>
     </div>
